// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create bam adapter config 1`] = `
Object {
  "configId": Any<String>,
  "index": Object {
    "configId": Any<String>,
  },
  "type": "BamAdapter",
}
`;

exports[`create track config 1`] = `
Object {
  "adapter": Object {
    "configId": Any<String>,
    "index": Object {
      "configId": Any<String>,
    },
    "type": "BamAdapter",
  },
  "configId": Any<String>,
  "renderers": Object {
    "PileupRenderer": Object {
      "configId": Any<String>,
      "type": "PileupRenderer",
    },
    "SvgFeatureRenderer": Object {
      "configId": Any<String>,
      "labels": Object {
        "configId": Any<String>,
      },
      "type": "SvgFeatureRenderer",
    },
    "configId": Any<String>,
  },
  "type": "AlignmentsTrack",
}
`;
